keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
    #namespace: keycloak
spec:
  rules:
  - host: my-custom-domain.space.nip.io
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-svc 
            port:
              number: 8080
